--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <img src="./assets/icono-cerrar.svg" alt="Icono cerrar">
           </div>
           <form class="banner-span-girbaud-form" id="form-primera-compra">
-            <div class="banner-span-girbaud-form-img">
-              <img src="./assets/logo-nuevo-Girbaud.png" alt="logo girbaud" width="100">
+            <div class="banner-span-girbaud-form-img logo-girbaud-parte2">
+              <img src="./assets/logo-nuevo-Girbaud.png" class="" alt="logo girbaud" width="100">
             </div>
             <div class="banner-span-girbaud-info">
               <p>¡Inscríbete y obtén un 15% de descuento en tu primera compra!</p>
